# Epson-Waste-Reset

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  new-printer-model-submission.md
cli/: main.cpp
include/ewr/: parser.h  payload.h  usb.h
models/: L3150.c  L3210.c  l222.c
src/: parser.cpp  usb_linux.cpp  usb_windows.cpp
